# RG350Launcher

./: .gitignore  CMakeLists.txt  README.md
include/: result.hpp  results.hpp  types.hpp  venus.hpp
include/dev/: device.hpp  device_screen.hpp
include/gui/: gui_home.hpp
include/gui/page/: page_emulators.hpp  page_homebrew.hpp  page_settings.hpp
include/ui/: application.hpp  gui.hpp  style.hpp
include/ui/view/: button.hpp  debug_rectangle.hpp  grid.hpp  header.hpp  image.hpp  image_button.hpp  page_switcher.hpp  view.hpp
libs/glad/include/glad/: gl.h
libs/glad/src/: gl.c
source/: main.cpp
source/dev/: device.cpp
source/gui/page/: page_emulators.cpp  page_homebrew.cpp  page_settings.cpp
source/ui/: application.cpp  gui.cpp
source/ui/view/: button.cpp  debug_rectangle.cpp  grid.cpp  header.cpp  image.cpp  image_button.cpp  page_switcher.cpp  view.cpp
